--- a/css/style.css
+++ b/css/style.css
@@ -196,44 +196,20 @@ section h2:after {
 }
 
 /* Hidden X.com link styling */
-.hidden-link-container {
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 1;
+.hidden-x-link {
+    position: relative;
+    width: 100%;
 }
 
-.hidden-link {
-    opacity: 0;
-    pointer-events: auto;
+.hidden-x-link a {
+    position: absolute;
+    top: -40px;
+    right: 0;
+    width: 100px;
+    height: 40px;
     cursor: pointer;
-    width: 60px;
-    height: 60px;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    position: absolute;
-    right: 0;
-    top: -10px;
-}
-
-.hidden-link:hover {
-    background-color: transparent;
-    transform: none;
-}
-
-.invisible-text {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
+    opacity: 0;
+    z-index: 10;
 }
 
 /* ---------- Dynamic Links Section ---------- */
